allow nodes to have simulation configs
